Alteração do Título do Site e textos de destaque

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Cabeçalho/topo -->
     <header>
         <div class="container">
-            <h1><a href="#topo"> Ômega</a></h1>
+            <h1><a href="#topo">Ômega - Agência Digital</a></h1>
             <nav>
                 <a href="#empresa">Nossa Empresa</a></li>
                 <a href="#produtos">Produtos</a></li>
